--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
     "@types/node": "^18.0.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.4.0",
     "d3": "^7.9.0",
     "react": "^18.2.0",
